Parallelize symbol fetching in Markets and Commodities controllers
Sequential HTTP calls to Yahoo Finance for 60+ symbols was causing
20-30s response times on cold cache, timing out on Railway/mobile.
Now uses virtual threads + CompletableFuture.allOf pattern with 8s
per-symbol timeout so all symbols fetch concurrently.